Fix pipeline state update handling (#777)